--- a/templates/default/list_forward_zones.html
+++ b/templates/default/list_forward_zones.html
@@ -122,7 +122,7 @@
                         <td><span data-bs-toggle="tooltip" data-bs-placement="bottom" title="{{ zone['comment'] }}">
                             {{ zone["utf8_name"] }}
                             </span></td>
-                        <td>{{ zone["type"] | lower }}</td>
+                        <td><span class="badge {{ zone_type_class(zone['type']) }}">{{ zone['type'] }}</span></td>
                         <td>{{ zone["count_records"] }}</td>
 
                         <td>
