--- a/lib/Module/ZoneImportExport/templates/import.html
+++ b/lib/Module/ZoneImportExport/templates/import.html
@@ -76,7 +76,7 @@
                     {% for record in records %}
                     <tr>
                         <td><code>{{ record.name }}</code></td>
-                        <td><span class="badge bg-secondary">{{ record.type }}</span></td>
+                        <td><span class="badge {{ record_type_class(record.type) }}">{{ record.type }}</span></td>
                         <td class="text-break" style="max-width: 400px">{{ record.content }}</td>
                         <td>{{ record.ttl }}</td>
                         <td>{{ record.priority }}</td>
