--- a/templates/default/edit.html
+++ b/templates/default/edit.html
@@ -512,6 +512,9 @@
             <i class="bi bi-file-earmark-text me-1 text-primary"></i>{% trans %}Bulk add{% endtrans %}
         </a>
         {% if export_formats is defined and export_formats|length > 0 %}
+        <a href="{{ base_url_prefix }}/tools/zone-import?zone_id={{ zone_id }}&amp;zone_name={{ zone_name }}" class="btn btn-outline-secondary btn-sm">
+            <i class="bi bi-upload me-1 text-secondary"></i>{% trans %}Import{% endtrans %}
+        </a>
         <div class="btn-group">
             <button type="button" class="btn btn-outline-secondary btn-sm dropdown-toggle" data-bs-toggle="dropdown">
                 <i class="bi bi-download me-1 text-secondary"></i>{% trans %}Export{% endtrans %}
