--- a/templates/modern/api_keys.html
+++ b/templates/modern/api_keys.html
@@ -1,6 +1,7 @@
 <nav aria-label="breadcrumb">
     <ol class="breadcrumb">
         <li class="breadcrumb-item"><a href="{{ base_url_prefix }}/">{% trans %}Home{% endtrans %}</a></li>
+        <li class="breadcrumb-item">{% trans %}Tools{% endtrans %}</li>
         <li class="breadcrumb-item" aria-current="page">{% trans %}API Keys{% endtrans %}</li>
     </ol>
 </nav>
