--- a/templates/modern/pdns_status.html
+++ b/templates/modern/pdns_status.html
@@ -2,6 +2,7 @@
 <nav aria-label="breadcrumb">
     <ol class="breadcrumb">
         <li class="breadcrumb-item"><a href="{{ base_url_prefix }}/">{% trans %}Home{% endtrans %}</a></li>
+        <li class="breadcrumb-item">{% trans %}Tools{% endtrans %}</li>
         <li class="breadcrumb-item" aria-current="page">{% trans %}PowerDNS Server Status{% endtrans %}</li>
     </ol>
 </nav>
