--- a/templates/default/style/light.css
+++ b/templates/default/style/light.css
@@ -9,7 +9,9 @@
 
 /* Base layout */
 body {
+    background-color: #f7f8f9;
     background-image: linear-gradient(180deg, #eee, #fff 100px, #fff);
+    background-repeat: no-repeat;
 }
 
 /* Header styles */
