--- a/templates/modern/style/light.css
+++ b/templates/modern/style/light.css
@@ -12,7 +12,9 @@
 
 /* Base layout - Sidebar Layout */
 body {
+    background-color: #f7f8f9;
     background-image: linear-gradient(180deg, #eee, #fff 100px, #fff);
+    background-repeat: no-repeat;
     min-height: 100vh;
 }
 
