refactor(whois): move WHOIS lookup to module system

--- a/lib/Module/Whois/templates/whois.html
+++ b/lib/Module/Whois/templates/whois.html
@@ -1,6 +1,7 @@
 <nav aria-label="breadcrumb">
     <ol class="breadcrumb">
         <li class="breadcrumb-item"><a href="{{ base_url_prefix }}/">{% trans %}Home{% endtrans %}</a></li>
+        <li class="breadcrumb-item">{% trans %}Tools{% endtrans %}</li>
         <li class="breadcrumb-item" aria-current="page">{% trans %}WHOIS Lookup{% endtrans %}</li>
     </ol>
 </nav>
@@ -13,7 +14,7 @@
     <div class="card-body">
         <form method="post" action="{{ base_url_prefix }}/whois">
             <input type="hidden" name="_token" value="{{ csrf_token }}">
-            
+
             <div class="row mb-3">
                 <div class="col-md-4">
                     <div class="input-group input-group-sm">
