--- a/templates/default/edit.html
+++ b/templates/default/edit.html
@@ -196,10 +196,12 @@
                 <i class="bi bi-plus-circle me-1 text-white"></i>{% trans %}Add record{% endtrans %}
             </a>
             {% endif %}
-            {% if perm_is_godlike and whois_enabled %}
-            <a href="{{ base_url_prefix }}/zones/{{ zone_id }}/whois" class="btn btn-secondary btn-sm">
-                <i class="bi bi-search-heart me-1 text-white"></i>{% trans %}WHOIS{% endtrans %}
+            {% if whois_actions is defined and whois_actions|length > 0 %}
+            {% for action in whois_actions %}
+            <a href="{{ base_url_prefix }}{{ action.url }}" class="btn btn-secondary btn-sm">
+                <i class="bi bi-{{ action.icon }} me-1 text-white"></i>{{ action.label }}
             </a>
+            {% endfor %}
             {% endif %}
             <a href="{{ base_url_prefix }}/zones/{{ zone_id }}/ownership" class="btn btn-secondary btn-sm">
                 <i class="bi bi-people me-1 text-white"></i>{% trans %}Ownership{% endtrans %}
